--- a/город.css
+++ b/город.css
@@ -55,4 +55,44 @@ body, html {
   .container {
     background-image: url("город_тел.png"); /* Фон для десктопной версии */
   }
+
+  .image-button1 {
+    margin: 0;
+    position: absolute;
+    top: 14%;
+    right: 46%;
+    transform: rotate(90deg);
+  }
+  
+  .image-button2 {
+    margin: 0;
+    position: absolute;
+    top: 75%;
+    right: 48%;
+    transform: rotate(90deg);
+  }
+  
+  .image-button3 {
+    margin: 0;
+    position: absolute;
+    top: 24%;
+    right: 1%;
+    transform: rotate(90deg);
+  }
+  
+  .image-button4 {
+    margin: 0;
+    position: absolute;
+    top: 42%;
+    right: 33%;
+    transform: rotate(90deg);
+  }
+  
+  .image-button5 {
+    margin: 0;
+    position: absolute;
+    bottom: 10px;
+    right: 10px;
+    transform: rotate(90deg);
+  }
 }
