--- a/город.css
+++ b/город.css
@@ -53,7 +53,7 @@ body, html {
 
 @media (max-width: 361px) {
   .container {
-    background-image: url("город_тел.png"); /* Фон для десктопной версии */
+    background-image: url("город.jpg"); /* Фон для десктопной версии */
     transform: rotate(90deg);
   }
 
