--- a/город.css
+++ b/город.css
@@ -53,6 +53,8 @@ body, html {
 
 @media (max-width: 361px) {
   .container {
+    width: 100%;
+    height: 100%;
     background-image: url("город_тел\ \(2\).png"); /* Фон для десктопной версии */
   }
 
