--- a/город.css
+++ b/город.css
@@ -53,8 +53,8 @@ body, html {
 
 @media (max-width: 361px) {
   .container {
-    width: 100%;
-    height: 100%;
+    width: 360px;
+    height: 640px;
     background-image: url("город_тел\ \(2\).png"); /* Фон для десктопной версии */
   }
 
