--- a/город.css
+++ b/город.css
@@ -10,7 +10,6 @@ body, html {
   background-size: cover;
   background-position: center;
   position: relative; /* Для позиционирования дочерних элементов */
-  transform: rotate(90deg);
 }
 
 .image-button1 {
@@ -52,11 +51,11 @@ body, html {
   right: 20px;
 }
 
-@media (max-width: 361px) {
+@media (max-width: 601px) {
   .container {
-    width: 360px;
-    height: 640px;
-    background-image: url("город_тел\ \(2\).png"); /* Фон для десктопной версии */
+    width: 100%;
+    height: 100%;
+    background-image: url("город_тел.png"); /* Фон для десктопной версии */
     background-size: cover;
     background-position: center;
     position: relative; /* Для позиционирования дочерних элементов */
@@ -65,35 +64,40 @@ body, html {
   .image-button1 {
     margin: 0;
     position: absolute;
-    top: 14%;
-    right: 46%;
+    top: 24%;
+    right: 8%;
+    transform: rotate(90deg) scale(0.8);
   }
   
   .image-button2 {
     margin: 0;
     position: absolute;
-    top: 75%;
-    right: 48%;
+    top: 30%;
+    right: 65%;
+    transform: rotate(90deg) scale(0.8);
   }
   
   .image-button3 {
     margin: 0;
     position: absolute;
-    top: 24%;
-    right: 1%;
+    top: 70%;
+    right: 13%;
+    transform: rotate(90deg) scale(0.8);
   }
   
   .image-button4 {
     margin: 0;
     position: absolute;
-    top: 42%;
-    right: 33%;
+    top: 54%;
+    right: 36%;
+    transform: rotate(90deg) scale(0.8);
   }
   
   .image-button5 {
     margin: 0;
     position: absolute;
-    bottom: 10px;
-    right: 10px;
+    top: 1%;
+    right: 1%;
+    transform: rotate(30deg) scale(0.7);
   }
 }
