--- a/город.css
+++ b/город.css
@@ -51,7 +51,7 @@ body, html {
   right: 20px;
 }
 
-@media (max-width: 800px) {
+@media (max-width: 400px) {
   .container {
     width: 100%;
     height: 100%;
@@ -99,5 +99,47 @@ body, html {
     top: -3%;
     right: -1%;
     transform: rotate(30deg) scale(0.6);
+  }
+}
+
+@media (max-width: 1000px) {
+  .image-button1 {
+    margin: 0;
+    position: absolute;
+    top: 20%;
+    right: -10%;
+    transform: scale(0.5);
+  }
+  
+  .image-button2 {
+    margin: 0;
+    position: absolute;
+    top: 32%;
+    right: 55%;
+    transform: scale(0.5);
+  }
+  
+  .image-button3 {
+    margin: 0;
+    position: absolute;
+    top: 56%;
+    right: -5%;
+    transform: scale(0.5);
+  }
+  
+  .image-button4 {
+    margin: 0;
+    position: absolute;
+    top: 49%;
+    right: 25%;
+    transform: scale(0.5);
+  }
+  
+  .image-button5 {
+    margin: 0;
+    position: absolute;
+    top: -3%;
+    left: -1%;
+    transform: scaleX(-1) scale(0.5);
   }
 }
