--- a/город.css
+++ b/город.css
@@ -137,8 +137,8 @@ body, html {
     .image-button5 {
       margin: 0;
       position: absolute;
-      top: 1%;
-      right: 1%;
+      left: 70%;
+      top: -3%;
       transform: rotate(30deg) scale(0.6);
     }
   }
