--- a/город.css
+++ b/город.css
@@ -52,36 +52,44 @@ body, html {
 }
 
 @media (max-width: 1000px) {
+  .container {
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-position: center;
+    position: relative; /* Для позиционирования дочерних элементов */
+  }
+
   .image-button1 {
     margin: 0;
     position: absolute;
-    top: 15%;
+    top: 10%;
     right: 43%;
-    transform: scale(1.1);
+    transform: scale(1.0);
   }
   
   .image-button2 {
     margin: 0;
     position: absolute;
-    top: 73%;
-    right: 47%;
-    transform: scale(1.1);
+    top: 70%;
+    right: 45%;
+    transform: scale(1.0);
   }
   
   .image-button3 {
     margin: 0;
     position: absolute;
-    top: 24%;
-    right: 0%;
-    transform: scale(1.1);
+    top: 21%;
+    right: 7%;
+    transform: scale(1.0);
   }
   
   .image-button4 {
     margin: 0;
     position: absolute;
-    top: 42%;
-    right: 25%;
-    transform: scale(1.1);
+    top: 41%;
+    right: 28%;
+    transform: scale(0.9);
   }
   
   .image-button5 {
