--- a/город.css
+++ b/город.css
@@ -53,8 +53,9 @@ body, html {
 
 @media (max-width: 1000px) {
   .container {
-    width: 100%;
+    width: 980px;
     height: 100%;
+    background-image: url("город.jpg"); /* Фон для десктопной версии */
     background-size: cover;
     background-position: center;
     position: relative; /* Для позиционирования дочерних элементов */
