--- a/город.css
+++ b/город.css
@@ -53,8 +53,8 @@ body, html {
 
 @media (max-width: 1000px) {
   .container {
-    width: 980px;
-    height: 100%;
+    width: 100%;
+    height: 800px;
     background-image: url("город.jpg"); /* Фон для десктопной версии */
     background-size: cover;
     background-position: center;
@@ -138,9 +138,9 @@ body, html {
     .image-button4 {
       margin: 0;
       position: absolute;
-      top: 49%;
-      right: 25%;
-      transform: rotate(90deg) scale(0.6);
+      top: 48%;
+      right: 24%;
+      transform: rotate(90deg) scale(0.5);
     }
     
     .image-button5 {
